--- a/AVL-Tree/AVL_tree.ipynb
+++ b/AVL-Tree/AVL_tree.ipynb
@@ -11,13 +11,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 76,
       "metadata": {
         "id": "jDHuLhuJ3y8e"
       },
       "outputs": [],
       "source": [
-        "class TreeNode:\n",
+        "class AVLNode:\n",
         "    def __init__(self, key):\n",
         "        self.left = None\n",
         "        self.right = None\n",
@@ -29,12 +29,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "AVL Tree"
+        "AVL Tree Class"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -42,24 +42,45 @@
         "    def __init__(self):\n",
         "        self.root = None\n",
         "\n",
+        "    def height(self, node):\n",
+        "        if not node:\n",
+        "            return 0\n",
+        "        return node.height\n",
+        "\n",
+        "    def balance(self, node):\n",
+        "        if not node:\n",
+        "            return 0\n",
+        "        return self.height(node.left) - self.height(node.right)\n",
+        "\n",
         "    def insert(self, key):\n",
-        "        if self.root is None:\n",
-        "            self.root = TreeNode(key)\n",
-        "        else:\n",
-        "            self._insert(self.root, key)\n",
-        "        self._insert(self.root, key)\n",
+        "        self.root = self._insert(self.root, key)\n",
         "    \n",
         "    def _insert(self, node, key):\n",
+        "        if not node:\n",
+        "            return AVLNode(key)\n",
         "        if key < node.val:\n",
-        "            if node.left is None:\n",
-        "                node.left = TreeNode(key)\n",
-        "            else:\n",
-        "                self._insert(node.left, key)\n",
+        "            node.left = self._insert(node.left, key)  # Assign to left\n",
         "        else:\n",
-        "            if node.right is None:\n",
-        "                node.right = TreeNode(key)\n",
-        "            else:\n",
-        "                self._insert(node.right, key)\n",
+        "            node.right = self._insert(node.right, key)  # Assign to right\n",
+        "        \n",
+        "        node.height = 1 + max(self.height(node.left), self.height(node.right))\n",
+        "        balance = self.balance(node)\n",
+        "\n",
+        "        # Left Left Case\n",
+        "        if balance > 1 and key < node.left.val:\n",
+        "            return self.right_rotate(node)\n",
+        "        # Right Right Case\n",
+        "        if balance < -1 and key > node.right.val:\n",
+        "            return self.left_rotate(node)\n",
+        "        # Left Right Case\n",
+        "        if balance > 1 and key > node.left.val:\n",
+        "            node.left = self.left_rotate(node.left)\n",
+        "            return self.right_rotate(node)\n",
+        "        # Right Left Case\n",
+        "        if balance < -1 and key < node.right.val:\n",
+        "            node.right = self.right_rotate(node.right)\n",
+        "            return self.left_rotate(node)\n",
+        "        return node\n",
         "\n",
         "    def inorder_traversal(self):\n",
         "        if self.root:\n",
@@ -69,8 +90,118 @@
         "    def _inorder_traversal(self, node):\n",
         "        if node:\n",
         "            self._inorder_traversal(node.left)\n",
-        "            print(node.val, end=\", \")\n",
-        "            self._inorder_traversal(node.right)"
+        "            print(node.val, end=\" \")\n",
+        "            self._inorder_traversal(node.right)\n",
+        "    \n",
+        "    def level_order_traversal(self):    \n",
+        "        if not self.root:\n",
+        "            return\n",
+        "        queue = [self.root]\n",
+        "        while queue:\n",
+        "            node = queue.pop(0)\n",
+        "            print(node.val, end=\" \")\n",
+        "            if node.left:\n",
+        "                queue.append(node.left)\n",
+        "            if node.right:\n",
+        "                queue.append(node.right)\n",
+        "        print()\n",
+        "    \n",
+        "    def pre_order_traversal(self):\n",
+        "        if self.root:\n",
+        "            self._pre_order_traversal(self.root)\n",
+        "        print()\n",
+        "    def _pre_order_traversal(self, node):\n",
+        "        if not node:\n",
+        "            return\n",
+        "        print(node.val, end=\" \")\n",
+        "        self._pre_order_traversal(node.left)\n",
+        "        self._pre_order_traversal(node.right)\n",
+        "    \n",
+        "    def post_order_traversal(self):\n",
+        "        if self.root:\n",
+        "            self._post_order_traversal(self.root)\n",
+        "        print()\n",
+        "    def _post_order_traversal(self, node):\n",
+        "        if not node:\n",
+        "            return\n",
+        "        self._post_order_traversal(node.left)\n",
+        "        self._post_order_traversal(node.right)\n",
+        "        print(node.val, end=\" \")\n",
+        "    \n",
+        "    def left_rotate(self, z):\n",
+        "        y = z.right\n",
+        "        T2 = y.left\n",
+        "        # Perform rotation\n",
+        "        y.left = z\n",
+        "        z.right = T2\n",
+        "        # Update heights\n",
+        "        z.height = 1 + max(self.height(z.left), self.height(z.right))\n",
+        "        y.height = 1 + max(self.height(y.left), self.height(y.right))\n",
+        "        return y\n",
+        "    \n",
+        "    def right_rotate(self, z):\n",
+        "        y = z.left\n",
+        "        T3 = y.right\n",
+        "        # Perform rotation\n",
+        "        y.right = z\n",
+        "        z.left = T3\n",
+        "        # Update heights\n",
+        "        z.height = 1 + max(self.height(z.left), self.height(z.right))\n",
+        "        y.height = 1 + max(self.height(y.left), self.height(y.right))\n",
+        "        return y\n",
+        "    \n",
+        "    \n",
+        "    def _find_inorder_successor(self, node):\n",
+        "        parent = None\n",
+        "        while node.left:\n",
+        "            parent = node\n",
+        "            node = node.left\n",
+        "        return node\n",
+        "\n",
+        "    def delete(self, key):\n",
+        "        self.root = self._delete(self.root, key)\n",
+        "        \n",
+        "    def _delete(self, node, key):\n",
+        "        if node is None:\n",
+        "            return node\n",
+        "        \n",
+        "        if key < node.val:\n",
+        "            node.left = self._delete(node.left, key)\n",
+        "        elif key > node.val:\n",
+        "            node.right = self._delete(node.right, key)\n",
+        "        else:\n",
+        "            # Node with only one child or no child\n",
+        "            if node.left is None:\n",
+        "                return node.right\n",
+        "            elif node.right is None:\n",
+        "                return node.left\n",
+        "            \n",
+        "            # Node with two children: Get the inorder successor (smallest in the right subtree)\n",
+        "            temp = self._find_inorder_successor(node.right)\n",
+        "            node.val = temp.val\n",
+        "            node.right = self._delete(node.right, temp.val)\n",
+        "\n",
+        "        # Update height of the current node\n",
+        "        node.height = 1 + max(self.height(node.left), self.height(node.right))\n",
+        "        balance = self.balance(node)\n",
+        "\n",
+        "        # Left Left Case\n",
+        "        if balance > 1 and self.balance(node.left) >= 0:\n",
+        "            return self.right_rotate(node)\n",
+        "        # Right Right Case\n",
+        "        if balance < -1 and self.balance(node.right) <= 0:\n",
+        "            return self.left_rotate(node)\n",
+        "        # Left Right Case\n",
+        "        if balance > 1 and self.balance(node.left) < 0:\n",
+        "            node.left = self.left_rotate(node.left)\n",
+        "            return self.right_rotate(node)\n",
+        "        # Right Left Case  \n",
+        "        if balance < -1 and self.balance(node.right) > 0:\n",
+        "            node.right = self.right_rotate(node.right)\n",
+        "            return self.left_rotate(node)\n",
+        "        return node\n",
+        "\n",
+        "   "
       ]
     },
     {
@@ -82,23 +213,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "10, 10, 20, 20, 30, 30, \n"
+            "Inorder traversal (should be sorted):\n",
+            "3 5 7 10 12 15 18 \n",
+            "Preorder traversal:\n",
+            "10 5 3 7 15 12 18 \n",
+            "Postorder traversal:\n",
+            "3 7 5 12 18 15 10 \n",
+            "Level order traversal:\n",
+            "10 5 15 3 7 12 18 \n",
+            "\n",
+            "Delete 10 (root) and show traversals again:\n",
+            "Inorder traversal after delete:\n",
+            "3 5 7 12 15 18 \n",
+            "Preorder traversal after delete:\n",
+            "12 5 3 7 15 18 \n",
+            "Postorder traversal after delete:\n",
+            "3 7 5 18 15 12 \n",
+            "Level order traversal after delete:\n",
+            "12 5 15 3 7 18 \n"
           ]
         }
       ],
       "source": [
+        "\n",
         "avl = AVLTree()\n",
-        "avl.insert(10)\n",
-        "avl.insert(20)\n",
-        "avl.insert(30)\n",
-        "avl.inorder_traversal()  # Output: 10, 20, 30"
+        "values = [10, 5, 15, 3, 7, 12, 18]\n",
+        "for v in values:\n",
+        "    avl.insert(v)\n",
+        "\n",
+        "print(\"Inorder traversal (should be sorted):\")\n",
+        "avl.inorder_traversal()      # 3 5 7 10 12 15 18\n",
+        "\n",
+        "print(\"Preorder traversal:\")\n",
+        "avl.pre_order_traversal()    # 10 5 3 7 15 12 18\n",
+        "\n",
+        "print(\"Postorder traversal:\")\n",
+        "avl.post_order_traversal()   # 3 7 5 12 18 15 10\n",
+        "\n",
+        "print(\"Level order traversal:\")\n",
+        "avl.level_order_traversal()  # 10 5 15 3 7 12 18\n",
+        "\n",
+        "print(\"\\nDelete 10 (root) and show traversals again:\")\n",
+        "avl.delete(10)\n",
+        "\n",
+        "print(\"Inorder traversal after delete:\")\n",
+        "avl.inorder_traversal()      # 3 5 7 12 15 18\n",
+        "\n",
+        "print(\"Preorder traversal after delete:\")\n",
+        "avl.pre_order_traversal()    # 12 5 3 7 15 18\n",
+        "\n",
+        "print(\"Postorder traversal after delete:\")\n",
+        "avl.post_order_traversal()   # 3 7 5 18 15 12\n",
+        "\n",
+        "print(\"Level order traversal after delete:\")\n",
+        "avl.level_order_traversal()  # 12 5 15 3 7 18"
       ]
     }
   ],
@@ -107,7 +282,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -121,7 +296,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
